src/objects/Alerta__c.object
<CustomObject>
    <fields>
        <fullName>Cliente__c</fullName>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Alertas</relationshipLabel>
        <relationshipName>Alertas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Descripcion__c</fullName>
        <label>Descripcion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fecha_fin_de_reporte__c</fullName>
        <label>Fecha fin de reporte</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Alerta</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Alerta Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alertas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>